# Qtraktor

./: .clang-format  .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Info.plist  Info.plist.in  Qtraktor.pro  README.md  SECURITY.md  Traktor_resource.rc  appdelegate.cpp  appdelegate.h  appveyor.yml  autoextractor.cpp  autoextractor.h  backupfile.cpp  backupfile.h  cryptoutils.cpp  cryptoutils.h  dockprogress_stub.cpp  dropoverlay.cpp  dropoverlay.h  extractionworker.cpp  extractionworker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  passworddialog.cpp  progresswindow.cpp  progresswindow.h  release-please-config.json  resources.qrc  win32.rc  wpress.xml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  label.yml  release-please.yml  release.yml
.travis/: macOS.sh
docs/: CNAME  index.html  privacy.html  terms.html
icons/: file.icns  traktor.rc
scripts/macos-pkg/: distribution.xml  entitlements.plist  postinstall
scripts/macos-pkg/resources/: conclusion.html  welcome.html
scripts/sparkle/: appcast-macos.xml.tmpl  appcast-windows.xml.tmpl
scripts/windows/: installer.iss
src/: aboutdialog.cpp  aboutdialog.h  agentconfig.cpp  agentconfig.h  appdelegate.cpp  appdelegate.h  autoextractor.cpp  backupfile.cpp  backupfile.h  clihandler.cpp  clihandler.h  cryptoutils.cpp  cryptoutils.h  dockprogress.h  dockprogress.mm  dropoverlay.cpp  dropoverlay.h  extractionworker.cpp  extractionworker.h  gui_entry.cpp  installcli.cpp  installcli.h  main.cpp  mainwindow.cpp  mainwindow.h  mcpserver.cpp  mcpserver.h  passworddialog.cpp  passworddialog.h  setupdialog.cpp  setupdialog.h  updatemanager.h  updatemanager.mm  updatemanager_win.cpp
tests/: CMakeLists.txt  generate_fixtures  generate_fixtures.cpp  target_wrapper.sh  tests.pro  tst_backupfile.cpp  tst_cli.cpp  tst_cryptoutils_streaming.cpp  tst_extractionworker.cpp  tst_fuzz.cpp  tst_main.cpp  tst_qsettings.cpp  tst_qtraktor
tests/fixtures/: compressed.wpress  corrupted.wpress  multifile.wpress  plain.wpress  v2crc.wpress
